more spacing issues

--- a/stylesheets/blog-template-stylesheet.css
+++ b/stylesheets/blog-template-stylesheet.css
@@ -239,6 +239,8 @@ footer a:hover{
 
 
 #text{
+  background-color:;
+  opacity: ;
   width: 60%;
   /*height: 400px;*/
   /*border: 1px solid black;*/
